# monadns

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml
.github/workflows/: docker-publish.yml
frontend/: Cargo.toml  build.rs  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.svelte  app.css  lib.rs
frontend/src/assets/: Icon.svelte  Trash.svelte
frontend/src/lib/: ConfigTab.svelte  DomainListsTab.svelte  DomainsTab.svelte  LoginOverlay.svelte  Toast.svelte  api.ts  auth_state.svelte.ts  toast_state.svelte.ts
resolver/: Cargo.toml
resolver/migrations/: 20260228000000_init.sql  20260228000001_domain_lists.sql
resolver/src/: api.rs  app.rs  config.rs  fake_ip.rs  handler.rs  main.rs
resolver/src/domain_controller/: mod.rs  sqlite.rs
resolver/src/route_controller/: mod.rs  nftables.rs
